--- a/src/css/sections/_header.scss
+++ b/src/css/sections/_header.scss
@@ -40,29 +40,72 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 29px;
-        line-height: 33px;
-        font-family: 'Android101', sans-serif !important;
-
+        font-size: 36px;
+        line-height: 46px;
+        
         & svg {
-            margin-right: 8px;
+            margin-left: 8px;
             @include media-breakpoint-down(sm) {
                 display: none;
             }
         }
 
-        @media (max-width: 1200px) {
-            font-size: 25px;
+        @media (max-width: 990px) {
+            max-width: 80%;
+            margin: 0 auto;
+            width: 100%;
         }
 
-        @include media-breakpoint-down(sm) {
+        @media (max-width: 767px) {
             font-size: 20px;
-            line-height: 23px;
-            color: white;
+            line-height: 26px;
+
             top: 3px;
             left: 17px;
         }
     }
+
+    // NEW HEADER LOGO:
+
+    // &__logo {
+    //     text-decoration: none !important;
+    //     border: none;
+    //     text-align: center;
+    //     position: relative;
+    //     top: -3px;
+    //     left: 13px;
+    //     letter-spacing: 0;
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     font-size: 29px;
+    //     line-height: 33px;
+    //     font-family: 'Android101', sans-serif !important;
+    // @media (max-width: 990px) {
+            // max-width: 80%;
+            // margin: 0 auto;
+            // width: 100%;
+    // }
+
+    //     & svg {
+    //         margin-right: 8px;
+    //         @include media-breakpoint-down(sm) {
+    //             display: none;
+    //         }
+    //     }
+
+    //     @media (max-width: 1200px) {
+    //         font-size: 25px;
+    //     }
+
+    //     @include media-breakpoint-down(sm) {
+    //         font-size: 20px;
+    //         line-height: 23px;
+    //         color: white;
+    //         top: 3px;
+    //         left: 17px;
+    //     }
+    // }
 
     &__inline-menu {
         margin-left: auto !important;
