--- a/src/css/sections/main-search.scss
+++ b/src/css/sections/main-search.scss
@@ -547,7 +547,7 @@
 
     .banner__content {
       height: auto !important;
-      padding: 0px !important;
+      padding: 0px 16px !important;
     }
 
     .banner__input {
